# AlgorithmsAndData

./: README.md  Лаба №1. Списки.docx
3 sem/lab1/: CMakeLists.txt
3 sem/lab4/: main.cpp
coursach/: CMakeLists.txt  Курсовая работа.docx
coursach/Google_tests/: BackTest.cpp  CMakeLists.txt  ItemTest.cpp
coursach/src/: Constants.h  backpack.cpp  backpack.h  item.cpp  item.h  main.cpp
courseWork/: CMakeLists.txt  Курсовая.docx
courseWork/Google_tests/: CMakeLists.txt  FlowTest.cpp
courseWork/data/: algorythm_test.txt  missing_sink_test.txt  missing_source_test.txt  missing_string_test.txt  missing_symbol_test.txt  wrong_data_test.txt
courseWork/src/: Flow.cpp  Flow.h  List.h  main.cpp
lab1/: CMakeLists.txt  EL1.cpp  List.cpp  List.h  main.cpp  Лаб 1.docx
lab1/src/: EL1.cpp  EL1.h  List.cpp  List.h  Node.cpp  main.cpp  map.cpp  map.h
lab2.1/: CMakeLists.txt  Лаб 2.docx
lab2.1/Google_tests/: CMakeLists.txt  encoderTest.cpp
lab2.1/src/: Encoder.h  (+1 more)
lab3/: CMakeLists.txt  Лаб 3.docx
lab3/Google_tests/: CMakeLists.txt  Node_test.cpp  QueueNode_test.cpp  Queue_test.cpp  Stack_test.cpp  Tree_test.cpp  floydTest.cpp
lab3/data/: input_data.txt
lab3/src/: Floyd.h  Iterator.cpp  Iterator.h  List.cpp  List.h  Node.cpp  Node.h  Tree.cpp  Tree.h  TreeIterator.cpp  TreeIterator.h  main.cpp  map.cpp  map.h
lab3/src/iterators/: TreeBftIterator.cpp  TreeBftIterator.h  TreeDftIterator.cpp  TreeDftIterator.h
lab3/src/print/: Trunk.cpp  Trunk.h
lab3/src/queue/: Queue.cpp  Queue.h  QueueNode.cpp  QueueNode.h
lab4/: Algorithms.cpp  CMakeLists.txt  main.cpp
(+30 files in other folders)
